...
        {!this.props.loggedIn && <DrawerButton testID="loginDrawerButton" text="Iniciar Sesion" onPress={this.handlePressLogin} />}
        {!this.props.loggedIn && <DrawerButton testID="registerDrawerButton" text="Registrarse" onPress={this.handlePressRegister} />}
        {!this.props.loggedIn && (
          <DrawerButton testID="forgotPasswordDrawerButton" text="Olvide mi clave" onPress={this.handlePressForgotPassword} />
        )}

        {this.props.loggedIn && <DrawerButton testID="entitiesDrawerButton" text="Opciones" onPress={this.handlePressEntities} />}
        {this.props.loggedIn && <DrawerButton testID="settingsDrawerButton" text="Configuraciones" onPress={this.handlePressSettings} />}
        {this.props.loggedIn && (
          <DrawerButton testID="changePasswordDrawerButton" text="Cambiar Clave" onPress={this.handlePressChangePassword} />
        )}
        {this.props.loggedIn && <DrawerButton testID="logoutDrawerButton" text="Cerrar Sesion" onPress={this.handlePressLogout} />}
        {/*{__DEV__ && <DrawerButton testID="storybookDrawerButton" text="Storybook" onPress={this.handlePressStorybook} />}*/}
...
