const Utils = require('../utils')

describe('OrderHeader Screen Tests', () => {
  before(async () => {
    await device.reloadReactNative()
    await Utils.loginAsUser()
  })
  after(async () => {
    await Utils.goBack()
    await Utils.goBack()
    await Utils.logout()
  })

  beforeEach(async () => {
    await device.reloadReactNative()
    await navigateToOrderHeaderScreen()
  })

  const navigateToOrderHeaderScreen = async () => {
    await expect(element(by.id('launchScreen'))).toBeVisible()
    await element(by.id('menuButton')).tap()
    await element(by.id('entitiesDrawerButton')).tap()
    await Utils.scrollTo('orderHeaderEntityScreenButton', 'entityScreenScrollList')
    await element(by.id('orderHeaderEntityScreenButton')).tap()
  }

  it('should allow you to create an entity', async () => {
    await expect(element(by.id('orderHeaderScreen'))).toBeVisible()
    await expect(element(by.text('Create'))).toBeVisible()
    // create
    await element(by.id('orderHeaderCreateButton')).tap()
    await Utils.scrollTo('orderNumberInput', 'orderHeaderEditScrollView')
    await element(by.id('orderNumberInput')).replaceText('123')
    await Utils.scrollTo('descriptionInput', 'orderHeaderEditScrollView')
    await element(by.id('descriptionInput')).replaceText('sample-data')
    await Utils.scrollTo('grossTotalInput', 'orderHeaderEditScrollView')
    await element(by.id('grossTotalInput')).replaceText('123')
    await Utils.scrollTo('tax1TotalInput', 'orderHeaderEditScrollView')
    await element(by.id('tax1TotalInput')).replaceText('123')
    await Utils.scrollTo('tax2TotalInput', 'orderHeaderEditScrollView')
    await element(by.id('tax2TotalInput')).replaceText('123')
    await Utils.scrollTo('totalInput', 'orderHeaderEditScrollView')
    await element(by.id('totalInput')).replaceText('123')
    await element(by.id('submitButton')).tap()
    await element(by.text('View')).tap()
    await Utils.scrollTo('orderNumber', 'orderHeaderDetailScrollView')
    await expect(element(by.id('orderNumber'))).toHaveText('OrderNumber: 123')
    await Utils.scrollTo('description', 'orderHeaderDetailScrollView')
    await expect(element(by.id('description'))).toHaveText('Description: sample-data')
    await Utils.scrollTo('grossTotal', 'orderHeaderDetailScrollView')
    await expect(element(by.id('grossTotal'))).toHaveText('GrossTotal: 123')
    await Utils.scrollTo('tax1Total', 'orderHeaderDetailScrollView')
    await expect(element(by.id('tax1Total'))).toHaveText('Tax1Total: 123')
    await Utils.scrollTo('tax2Total', 'orderHeaderDetailScrollView')
    await expect(element(by.id('tax2Total'))).toHaveText('Tax2Total: 123')
    await Utils.scrollTo('total', 'orderHeaderDetailScrollView')
    await expect(element(by.id('total'))).toHaveText('Total: 123')
    // update
    await element(by.text('EDIT')).tap()
    await Utils.scrollTo('orderNumberInput', 'orderHeaderEditScrollView')
    await element(by.id('orderNumberInput')).replaceText('1234')
    await Utils.scrollTo('descriptionInput', 'orderHeaderEditScrollView')
    await element(by.id('descriptionInput')).replaceText('sample-data-2')
    await Utils.scrollTo('grossTotalInput', 'orderHeaderEditScrollView')
    await element(by.id('grossTotalInput')).replaceText('1234')
    await Utils.scrollTo('tax1TotalInput', 'orderHeaderEditScrollView')
    await element(by.id('tax1TotalInput')).replaceText('1234')
    await Utils.scrollTo('tax2TotalInput', 'orderHeaderEditScrollView')
    await element(by.id('tax2TotalInput')).replaceText('1234')
    await Utils.scrollTo('totalInput', 'orderHeaderEditScrollView')
    await element(by.id('totalInput')).replaceText('1234')
    await element(by.id('submitButton')).tap()
    await element(by.text('OK')).tap()
    await expect(element(by.id('orderNumber'))).toHaveText('OrderNumber: 1234')
    await expect(element(by.id('description'))).toHaveText('Description: sample-data-2')
    await expect(element(by.id('grossTotal'))).toHaveText('GrossTotal: 1234')
    await expect(element(by.id('tax1Total'))).toHaveText('Tax1Total: 1234')
    await expect(element(by.id('tax2Total'))).toHaveText('Tax2Total: 1234')
    await expect(element(by.id('total'))).toHaveText('Total: 1234')
    // delete
    await element(by.text('DELETE')).tap()
    await element(by.text('OK')).tap()
    await expect(element(by.id('orderHeaderScreen'))).toBeVisible()
  })
})
