const Utils = require('../utils')

describe('Product Screen Tests', () => {
  before(async () => {
    await device.reloadReactNative()
    await Utils.loginAsUser()
  })
  after(async () => {
    await Utils.goBack()
    await Utils.goBack()
    await Utils.logout()
  })

  beforeEach(async () => {
    await device.reloadReactNative()
    await navigateToProductScreen()
  })

  const navigateToProductScreen = async () => {
    await expect(element(by.id('launchScreen'))).toBeVisible()
    await element(by.id('menuButton')).tap()
    await element(by.id('entitiesDrawerButton')).tap()
    await Utils.scrollTo('productEntityScreenButton', 'entityScreenScrollList')
    await element(by.id('productEntityScreenButton')).tap()
  }

  it('should allow you to create an entity', async () => {
    await expect(element(by.id('productScreen'))).toBeVisible()
    await expect(element(by.text('Create'))).toBeVisible()
    // create
    await element(by.id('productCreateButton')).tap()
    await Utils.scrollTo('codeInput', 'productEditScrollView')
    await element(by.id('codeInput')).replaceText('sample-data')
    await Utils.scrollTo('descriptionInput', 'productEditScrollView')
    await element(by.id('descriptionInput')).replaceText('sample-data')
    await Utils.scrollTo('smallImageInput', 'productEditScrollView')
    await element(by.id('smallImageInput')).replaceText('sample-data')
    await Utils.scrollTo('mediumImageInput', 'productEditScrollView')
    await element(by.id('mediumImageInput')).replaceText('sample-data')
    await Utils.scrollTo('quantityInput', 'productEditScrollView')
    await element(by.id('quantityInput')).replaceText('123')
    await Utils.scrollTo('priceInput', 'productEditScrollView')
    await element(by.id('priceInput')).replaceText('123')
    await Utils.scrollTo('lastPriceInput', 'productEditScrollView')
    await element(by.id('lastPriceInput')).replaceText('123')
    await Utils.scrollTo('tax1Input', 'productEditScrollView')
    await element(by.id('tax1Input')).replaceText('123')
    await Utils.scrollTo('tax2Input', 'productEditScrollView')
    await element(by.id('tax2Input')).replaceText('123')
    await element(by.id('submitButton')).tap()
    await element(by.text('View')).tap()
    await Utils.scrollTo('code', 'productDetailScrollView')
    await expect(element(by.id('code'))).toHaveText('Code: sample-data')
    await Utils.scrollTo('description', 'productDetailScrollView')
    await expect(element(by.id('description'))).toHaveText('Description: sample-data')
    await Utils.scrollTo('smallImage', 'productDetailScrollView')
    await expect(element(by.id('smallImage'))).toHaveText('SmallImage: sample-data')
    await Utils.scrollTo('mediumImage', 'productDetailScrollView')
    await expect(element(by.id('mediumImage'))).toHaveText('MediumImage: sample-data')
    await Utils.scrollTo('quantity', 'productDetailScrollView')
    await expect(element(by.id('quantity'))).toHaveText('Quantity: 123')
    await Utils.scrollTo('price', 'productDetailScrollView')
    await expect(element(by.id('price'))).toHaveText('Price: 123')
    await Utils.scrollTo('lastPrice', 'productDetailScrollView')
    await expect(element(by.id('lastPrice'))).toHaveText('LastPrice: 123')
    await Utils.scrollTo('tax1', 'productDetailScrollView')
    await expect(element(by.id('tax1'))).toHaveText('Tax1: 123')
    await Utils.scrollTo('tax2', 'productDetailScrollView')
    await expect(element(by.id('tax2'))).toHaveText('Tax2: 123')
    // update
    await element(by.text('EDIT')).tap()
    await Utils.scrollTo('codeInput', 'productEditScrollView')
    await element(by.id('codeInput')).replaceText('sample-data-2')
    await Utils.scrollTo('descriptionInput', 'productEditScrollView')
    await element(by.id('descriptionInput')).replaceText('sample-data-2')
    await Utils.scrollTo('smallImageInput', 'productEditScrollView')
    await element(by.id('smallImageInput')).replaceText('sample-data-2')
    await Utils.scrollTo('mediumImageInput', 'productEditScrollView')
    await element(by.id('mediumImageInput')).replaceText('sample-data-2')
    await Utils.scrollTo('quantityInput', 'productEditScrollView')
    await element(by.id('quantityInput')).replaceText('1234')
    await Utils.scrollTo('priceInput', 'productEditScrollView')
    await element(by.id('priceInput')).replaceText('1234')
    await Utils.scrollTo('lastPriceInput', 'productEditScrollView')
    await element(by.id('lastPriceInput')).replaceText('1234')
    await Utils.scrollTo('tax1Input', 'productEditScrollView')
    await element(by.id('tax1Input')).replaceText('1234')
    await Utils.scrollTo('tax2Input', 'productEditScrollView')
    await element(by.id('tax2Input')).replaceText('1234')
    await element(by.id('submitButton')).tap()
    await element(by.text('OK')).tap()
    await expect(element(by.id('code'))).toHaveText('Code: sample-data-2')
    await expect(element(by.id('description'))).toHaveText('Description: sample-data-2')
    await expect(element(by.id('smallImage'))).toHaveText('SmallImage: sample-data-2')
    await expect(element(by.id('mediumImage'))).toHaveText('MediumImage: sample-data-2')
    await expect(element(by.id('quantity'))).toHaveText('Quantity: 1234')
    await expect(element(by.id('price'))).toHaveText('Price: 1234')
    await expect(element(by.id('lastPrice'))).toHaveText('LastPrice: 1234')
    await expect(element(by.id('tax1'))).toHaveText('Tax1: 1234')
    await expect(element(by.id('tax2'))).toHaveText('Tax2: 1234')
    // delete
    await element(by.text('DELETE')).tap()
    await element(by.text('OK')).tap()
    await expect(element(by.id('productScreen'))).toBeVisible()
  })
})
